--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Midnight theme
-description: Midnight is a theme for GitHub Pages.
+title: l0c4lh057
+description: Main page
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-midnight
