--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ description: Main page
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-midnight
+include:
+  - BetterDiscord/Plugins/GuildData
