--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: l0c4lh057
 description: Main page
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
